Corrected the directory location for the microphone image

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <input type="text" name="query">      
                         </div>
                         <div class="mic">
-                            <img class="micfile" src="images/mic.png">
+                            <img class="micfile" src="Images/mic.png">
                         </div>
                     </div>
             </div>
